--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "esbuild": "0.19.5",
         "express": "4.18.2",
         "typescript": "5.2.2",
-        "prettier": "3.0.3"
+        "prettier": "3.0.3",
+        "sass": "1.69.5"
     }
 }
