--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
         "@types/node": "20.9.0",
         "@types/react": "18.2.37",
         "@types/react-dom": "18.2.15",
+        "@webgpu/types": "0.1.39",
         "esbuild": "0.19.5",
         "express": "4.18.2",
-        "typescript": "5.2.2",
         "prettier": "3.0.3",
-        "sass": "1.69.5"
+        "sass": "1.69.5",
+        "typescript": "5.2.2"
     }
 }
